<resources>
    <string name="app_name">Financial Planner</string>
    <string name="financial_planner">Financial Planner</string>
    <string name="current_moth_summary">Current Month Summary</string>
    <string name="actual_income_actual_expenses">Actual Income / Actual Expenses: </string>
    <string name="_500">500</string>
    <string name="expenses_planned_actual_expenses">Expenses Planned / Actual Expenses: </string>
    <string name="income_planned_actual_income">Income Planned / Actual Income: </string>
    <string name="total_amount">Total Amount: </string>
    <string name="income_planned_expense_planned">Income Planned / Expense Planned:</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="expense_plans">Expense Plans</string>
    <string name="add_plans">Add Plans</string>
    <string name="income_plans">Income Plans</string>
    <string name="all_my_expenses_for_august_2019">All my expenses for August 2019</string>
    <string name="_1_09_2019_29_02_2020">1.09.2019 - 29.02.2020</string>
    <string name="plan_type">Plan Type</string>
    <string name="add_expense_plan">Add Expense Plan</string>
    <string name="description">Description</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="add_income_plan">Add Income Plan</string>
    <string name="save">Save</string>
    <string name="add_new_account">Add new Account</string>
    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="current_amount">Current Amount</string>
    <string name="account">Account</string>
    <string name="add_expense">Add Expense</string>
    <string name="plan">Plan</string>
    <string name="add">Add</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="add_income">Add Income</string>
    <string name="planned">Planned</string>
    <string name="drop_down_item">drop_down_item</string>
    <string name="plan_already_added">Plan already added</string>
    <string name="set_the_date">Set the Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toggle_planned_actual">toggle_planned_actual</string>
    <string name="actual_transaction">Actual Transaction</string>
    <string name="back_button">Back Button</string>
    <string name="mon">MON</string>
    <string name="expense_planned">Expense Planned</string>
    <string name="actual_expense_over_planned_limit">Actual Expense (Over Planned Limit)</string>
    <string name="actual_expense_under_planned_limit">Actual Expense (Under Planned Limit)</string>
    <string name="income_planned">Income Planned</string>
    <string name="actual_income_over_planned_limit">Actual Income (Over Planned Limit)</string>
    <string name="actual_income_under_planned_limit">Actual Income (Under Planned Limit)</string>
    <string name="sum_actual_expenses">Sum Actual Expenses</string>
    <string name="sum_planned_expenses">Sum Planned Expenses</string>
    <string name="sum_actual_income">Sum Actual Income</string>
    <string name="sum_planned_income">Sum Planned Income</string>
    <string name="difference">Difference:</string>
    <string name="deviation">Deviation:</string>
    <string name="_0_0">0.0</string>
</resources>
