<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ExpenseTransaction">


    <RelativeLayout
        android:id="@+id/toolbarRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indian_red">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/transactionTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/actual_transaction"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/toggleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_toRightOf="@+id/transactionTextViewTitle"
            android:contentDescription="@string/toggle_planned_actual"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_toggle_image" />

        <ImageView
            android:id="@+id/addExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/add_expense"
            android:focusable="true"
            android:padding="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_plus_sign" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRelative">

        <ListView
            android:id="@+id/transactionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </RelativeLayout>


</RelativeLayout>
