<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan"
    tools:context=".AddExpense">

    <LinearLayout
        android:id="@+id/titleExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/add_expense"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accountLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleExpense"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/accountTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_rectangle_spinner">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/planButtonLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountLinear"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/planLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/planTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/plan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/planTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_rectangle_spinner">
            </Spinner>

        </LinearLayout>

        <Button
            android:id="@+id/addExpensePlanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".1"
            android:background="@drawable/custom_rectangle_button"
            android:text="@string/add" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/categoryLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/planButtonLinear"
        android:orientation="vertical">

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/categoryTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_rectangle_spinner">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateAmountLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryLinear"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:id="@+id/calenderTypeLinearMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/enter_date"
                android:background="@drawable/custom_rectangle_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calenderTypeLinearYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_rectangle_edit_text"
                android:hint="@string/_500"
                android:inputType="numberDecimal"
                android:textSize="17sp">

            </EditText>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/planTypeLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateAmountLinear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/planBooleanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/planned"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/planSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/planBooleanTextView"
            android:layout_toRightOf="@id/planBooleanTextView" />

    </RelativeLayout>

    <Button
        android:id="@+id/saveExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/planTypeLinear"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_rectangle_button"
        android:text="@string/save" />

</RelativeLayout>