<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.IncomePieChart">


    <RelativeLayout
        android:id="@+id/toolbarRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/transactionTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/actual_transaction"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/toggleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/transactionTextViewTitle"
            android:clickable="true"
            android:contentDescription="@string/toggle_planned_actual"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_toggle_image" />

        <ImageView
            android:id="@+id/addIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/add_income"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_plus_sign" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/titlePieChartLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRelative"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/transactionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_income"
            android:textColor="@color/indigo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_500"
            android:textColor="@color/teal"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titlePieChartLinear"
        android:layout_marginTop="10dp">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/incomePieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.github.mikephil.charting.charts.PieChart>

    </RelativeLayout>

</RelativeLayout>