<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.IncomeComparision">


    <RelativeLayout
        android:id="@+id/toolbarRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenYellow">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/transactionTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/actual_transaction"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/addIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/add_income"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_plus_sign" />
    </RelativeLayout>

    <ListView
        android:id="@+id/comparisionListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRelative">
    </ListView>

    <LinearLayout
        android:id="@+id/legendListViewRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/comparisionListView"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@drawable/custom_rectangle"
                android:backgroundTint="@color/blue">
            </LinearLayout>

            <TextView
                android:id="@+id/firstTextViewLegend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/income_planned"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@drawable/custom_rectangle"
                android:backgroundTint="@color/green">
            </LinearLayout>

            <TextView
                android:id="@+id/secondTextViewLegend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/actual_income_under_planned_limit"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@drawable/custom_rectangle"
                android:backgroundTint="@color/red">
            </LinearLayout>

            <TextView
                android:id="@+id/thirdTextViewLegend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/actual_income_over_planned_limit"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>