<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.IncomeSummary">


    <RelativeLayout
        android:id="@+id/toolbarRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lime_green">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/transactionTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/actual_transaction"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/addIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/add_income"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_plus_sign" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/totalSummaryFirstLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRelative"
        android:background="@drawable/custom_rectangle"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/sumPlannedIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/sumPlannedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sum_planned_income"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sumPlannedAmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_0"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sumActualIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/sumActualText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sum_actual_income"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sumActualAmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_0"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondSummaryLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalSummaryFirstLinear"
        android:background="@drawable/custom_rectangle"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/imageTextLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageSentiment"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ic_sad" />

            <TextView
                android:id="@+id/differenceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/difference"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/differenceAmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_0"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deviationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/deviation"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deviationAmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_0"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSummaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/difference"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>