<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_rectangle">


    <LinearLayout
        android:id="@+id/monthAndDay"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rectangle"
        android:orientation="vertical"
        android:padding="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/month3Word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dayWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:textAlignment="center"
        android:layout_toRightOf="@+id/monthAndDay"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/all_my_expenses_for_august_2019"
        android:layout_toEndOf="@+id/monthAndDay"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        android:layout_alignParentRight="true"
        android:text="@string/_500"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center" />


</RelativeLayout>